--- a/site velo/assets/css/main.css
+++ b/site velo/assets/css/main.css
@@ -10,12 +10,50 @@
     font-family: "Open sans", Helvetica, Arial;
     font-weight: 300; 
 } */
+h1,h2,nav {
+    font-family: 'Lobster', cursive !important ;
+    font-size:4em;
+  
+}
+h3{
+    font-family: 'Lobster', cursive !important ; 
+}
+p{
+    font-family: 'Cuprum', sans-serif!important ;
+}
+#logo{
+    margin-bottom: -16px;
+}
+.rotated {
+    transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -webkit-transform: rotate(-5deg);
+    -khtml-transform: rotate(-5deg);
+    -ms-transform: rotate(-5deg);
+}
+
+.velo-container .side-column {
+    max-width: 16.66%;
+}
+
+.velo-container {
+    padding: 100px 50px;
+    background-position: center;
+    background-size: cover;
+}
+*, ::after, ::before {
+    box-sizing: border-box;
+}
 #mainnav{
     background-color: #232323;
 }
 .navbar{
     background-color: #232323 !important;
+   
     
+}
+#navbarNavDropdown{
+     margin-top: -37px !important;
 }
 #head.secondary {
     height: 100px;
@@ -72,16 +110,36 @@
     background: transparent;
 }
 
-@media (max-width: 767px) {
-    #head {
-        min-height: 420px;
-        padding-top: 160px;
+@media (min-width: 767px) {
+   #velo2{ 
+        width:300px !important;
+        height:50px !important;
+        max-width:
+        
+    
     }
-    #head .lead {
-        font-size: 34px;
+  
+}
+@media (max-width: 400px) {
+   h1{ 
+       margin-top: -38px !important;
+       
+        
+    
     }
+  
 }
 
+@media (max-width: 687px) {
+    #velo2{ 
+        width:300px !important;
+        height:100px !important;
+        
+    
+    }
+   
+
+}
 
 /* Autohide navbar */
 
@@ -208,18 +266,10 @@ img.pull-left {
 
 #map {
     width: 100%;
-    height: 280px;
+    height: 380px;
 }
 
-#social {
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
 
-#social .wrapper {
-    width: 340px;
-    margin: 0 auto;
-}
 
 
 /* Main content block */
